--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,7 @@ set(SOURCE_FILES
   src/main.cpp
   src/sdl/window.cpp
   src/file-operation.cpp
-  src/opengl/mesh.cpp
-  src/application-loop.cpp
-  src/opengl/gpu-buffer.cpp
+  src/opengl/opengl.cpp
   src/extern/glad/glad.c
 )
 
