--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ set(SOURCE_FILES
   src/file-operation.cpp
   src/opengl/opengl.cpp
   src/opengl/shader.cpp
+  src/opengl/shader-program.cpp
+  src/opengl/render-target.cpp
   src/extern/glad/glad.c
 )
 
